--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
 
                 <div class="wrapper" id="pokedex">
+
                     <div class="project" id="pokedex">
                         <h2>Pokedex</h2>
                         <img src="images/pokeball.svg" alt="">
@@ -113,6 +114,9 @@
                         </div>
                     </div>
                 </div>
+
+                <h3>Touch on projects, if on mobile device</h3>
+
                 
                 <div class="wrapper" id="mars">
 
@@ -162,51 +166,6 @@
         <div class="page" id="page4" data-tab="4">
             <!-- Content of the fourth page -->
         </div>
-        <!-- <div id="background"></div> -->
-        <!-- <div class="header">
-            <h1>Hi!<br />My name is Håvard</h1>
-            <img src="images/portrait.jpg" id="portrait" />
-        </div>
-        <div class="section">
-            <h2>About me</h2>
-            <p>
-                Hi! My name is Håvard. I am 26 years old and live underneath the
-                rainy clouds of Bergen, Norway.  Currently I have an internship
-                at DNB as Junior developer, where I am a part of a team creating
-                accessibility features for DNBs mobile app.  Here in Bergen I
-                thrive doing things I love, such as hiking, fishing, skiing,
-                gaming and religiously following english football.  Having
-                attended a bootcamp, Kodehode, in Bergen 9 months ago I have
-                dipped my toes deep into HTML, CSS, Javascript, React, Docker,
-                MongoDB and many many more, I feel comfortable solving problems
-                using these tools, as shown in my list of projects and seen in
-                my github. I cannot wait to take on new challenges, improve
-                further and develop the applications of tomorrow. If you want me
-                as a part of your team, feel free to get in touch with me
-                here.Thank you for your interest.
-            </p>
-        </div>
-        <div class="section">
-            <h2>Projects</h2>
-            <div class="projects">
-                <div class="project">
-                    <h2>Password-manager Scrimba</h2>
-                    <img src="images/passw.png" />
-                    <p>Github link: <br>"Github link"<br>Pages: <a>https://havardekodehode.github.io/scrimbaPasswordgenerator/</a></p>
-                </div>
-                <div class="project">
-                    <h2>Password-counter Scrimba</h2>
-                    <img src="images/passC.png" />
-                    <p>Github link: <br>"Github link"<br>Pages: <a>https://havardekodehode.github.io/scrimbaPassengerCounter/</a></p>
-                </div>
-                <div class="project">
-                    <h2>Unit converter Scrimba</h2>
-                    <img src="images/unitC.png" />
-                    <p>Github link: <br>"Github link"<br>Pages: <a>https://havardekodehode.github.io/scrimbaUnitConverter/</a></p>
-                </div>
-            </div>
-        </div>
 
-        <div class="section">©</div> -->
     </body>
 </html>
