desktop version sort of ok

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </head>
     <body>
         <div class="sectionContainer">
+
+            <section class="desktopHero" id="section1desktop">
+                <img src="images/portrait.jpg" alt="" srcset="">
+            </section>
+            </section>
             <section class="cardContainer" id="section1">
                 <div class="card">
                     <div class="is-like">LIKE</div>
@@ -44,7 +49,7 @@
                     bor under skyen, Bergen.<br /><br />
 
                     For tiden har jeg praksis hos DNB som Junior utvikler, hvor
-                    jeg er en del av et team som jobber universell utforming i
+                    jeg er en del av et team som jobber med universell utforming i
                     DNBs mobil app.<br /><br />
 
                     I Bergen har jeg alt jeg trenger for å trives: fiske,
@@ -54,15 +59,15 @@
                     jeg iløpet av de siste 9 månedene dyppet tærne mine i HTML,
                     CSS, JS, React, Docker, MongoDB og mye mer. Jeg føler meg
                     trygg med disse verktøyene og du kan se hvordan jeg har løst
-                    problemer med dem på mine prosjekter i Github.<br /><br />Jeg
-                    kan knapt vente til å bryne meg på nye utfordringer,
+                    problemer med dem på mine prosjekter i Github.<br /><br />Jeg glede rmeg til nye utfordringer,
                     forbedre meg ytterligere og utvikle morgendagens
                     applikasjoner. Hvis du ønsker meg med i teamet ditt, er du
-                    velkommen til å ta kontakt med meg her. Takk for din
-                    interesse
+                    velkommen til å ta kontakt med meg her. Takk for
+                    interessen.
                 </p>
             </section>
             <section id="section3">
+                <h1>Projects</h1>
                 <div class="projectsContainer"></div>
             </section>
             <section id="section4"></section>
