--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="variables.css" />
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="section1.css" />
+        <link rel="stylesheet" href="section3.css" />
         <link rel="stylesheet" href="structure.css" />
         <link rel="stylesheet" href="swipe.css" />
         <link rel="stylesheet" href="media-queries.css" />
