--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </section>
             <section id="section2">
-                <h1>About me</h1>
+                <h1>Om meg mock</h1>
                 <p>
                     Hei! Mitt navn er Håvard Einarsen. Jeg er 27 år gammel og
                     bor under skyen, Bergen.<br /><br />
@@ -68,7 +68,7 @@
                 </p>
             </section>
             <section id="section3">
-                <h1>Projects</h1>
+                <h1>Prosjekter</h1>
                 <div class="projectsContainer"></div>
             </section>
             <section id="section4"></section>
