Changed paths to make videos work in github pages

--- a/index.html
+++ b/index.html
@@ -44,23 +44,29 @@
                 </div>
             </section>
             <section id="section2">
-                <h1>Om meg mock</h1>
+                <h1>Om meg</h1>
                 <p>
                     Hei! Mitt navn er Håvard Einarsen. Jeg er 27 år gammel og
-                    bor under skyen, Bergen.<br /><br />
+                    bor i Bergen.<br /><br />
 
-                    For tiden har jeg praksis hos DNB som Junior utvikler, hvor
+                    For tiden deltar jeg på den intensive bootcampen Kodehode, hvor 
+                    til nå har fokusert på frontend utvikling, men hvor vi nå skal se
+                    mer på backend.
+                    <!-- mock -->
+                    <!-- For tiden har jeg praksis hos DNB som Junior utvikler, hvor
                     jeg er en del av et team som jobber med universell utforming i
-                    DNBs mobil app.<br /><br />
+                    DNBs mobil app.<br /><br /> -->
 
                     I Bergen har jeg alt jeg trenger for å trives: fiske,
-                    fjellturer, skiturer, gaming og Premier league kanalene.<br /><br />
+                    fjellturer, gaming og Premier league kanalene.<br /><br />
 
-                    Etter å ha deltatt på en intensiv bootcamp. Kodehode, har
-                    jeg iløpet av de siste 9 månedene dyppet tærne mine i HTML,
-                    CSS, JS, React, Docker, MongoDB og mye mer. Jeg føler meg
+                    Etter å ha deltatt på Kodehode kurset, har
+                    jeg iløpet av de siste 5 månedene dyppet tærne mine i HTML,
+                    CSS, Git, JS, TS, React. Jeg føler meg
                     trygg med disse verktøyene og du kan se hvordan jeg har løst
-                    problemer med dem på mine prosjekter i Github.<br /><br />Jeg glede rmeg til nye utfordringer,
+                    problemer med dem på mine prosjekter i Github.<br /><br />
+                    
+                    Jeg gleder meg til nye utfordringer,
                     forbedre meg ytterligere og utvikle morgendagens
                     applikasjoner. Hvis du ønsker meg med i teamet ditt, er du
                     velkommen til å ta kontakt med meg her. Takk for
