Refactor of mobile version done

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="variables.css" />
+        <link rel="stylesheet" href="media-queries.css" />
+        <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="layout.css" />
         <link rel="stylesheet" href="structure.css" />
         <link rel="stylesheet" href="mobileHeader.css" />
-
-        <!-- <link rel="stylesheet" href="media-queries.css" /> -->
-        <script src="index copy.js" type="module" defer></script>
+        <script src="index.js" type="module" defer></script>
     </head>
     <body>
         <header>
@@ -74,8 +73,8 @@
                         ta kontakt med meg her. Takk for interessen.
                     </p>
                 </section>
-                <section id="section2">
-                    <h2>Prosjekter</h2>
+                <section class="projects" id="section2">
+                    <!-- <h2>Prosjekter</h2> -->
                     <div class="projectsContainer"></div>
                 </section>
                 <!-- <section id="section3"></section> -->
