Desktop version updated

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="variables.css" />
-        <link rel="stylesheet" href="media-queries.css" />
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="layout.css" />
         <link rel="stylesheet" href="structure.css" />
         <link rel="stylesheet" href="mobileHeader.css" />
+        <link rel="stylesheet" href="media-queries.css" />
         <script src="index.js" type="module" defer></script>
     </head>
     <body>
@@ -40,8 +40,12 @@
                 </div>
             </div>
 
-            <div class="desktopHero" id="section1desktop">
+            <div
+                class="desktopHero flex-row just-cen alig-cen"
+                id="section1desktop"
+            >
                 <img src="images/portrait.jpg" alt="" srcset="" />
+                <h2>Håvard Einarsen<br />Full-stack Developer</h2>
             </div>
         </header>
         <main>
