Trying to fix broken site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="variables.css" />
         <link rel="stylesheet" href="index.css" />
         <link rel="stylesheet" href="layout.css" />
-        <link rel="stylesheet" href="structure.css" />
+        <!-- <link rel="stylesheet" href="structure.css" /> -->
         <link rel="stylesheet" href="mobileHeader.css" />
         <link rel="stylesheet" href="media-queries.css" />
         <script src="index.js" type="module" defer></script>
@@ -27,10 +27,10 @@
                 </div>
 
                 <div class="actions flex-row just-cen alig-cen">
-                    <button id="dislike">
+                    <button class="flex-row just-cen alig-cen" id="dislike">
                         <img src="images/x.svg" alt="Image of an X" />
                     </button>
-                    <button id="like">
+                    <button class="flex-row just-cen alig-cen" id="like">
                         <img
                             src="images/heart.svg"
                             alt="Image of a heart"
@@ -42,7 +42,7 @@
 
             <div class="desktopHero flex-col just-sta" id="section1desktop">
                 <div class="imageAndName flex-row just-cen alig-cen">
-                    <img src="images/portrait.jpg" alt="" srcset="" />
+                    <img src="images/defaultAvatar.jpg" alt="" srcset="" />
                     <h2>Håvard Einarsen<br />Full-stack Developer</h2>
                 </div>
                 <div class="navBar">
@@ -63,13 +63,13 @@
         <main>
             <div class="sectionContainer">
                 <section
-                    class="aboutMe flex-col alig-cen just-cen"
+                    class="aboutMe flex-col alig-sta just-sta"
                     id="section1"
                 >
-                    <div class="titleAndImage flex-row alig-cen">
+                    <!-- <div class="titleAndImage flex-row alig-cen">
                         <h2>Om meg</h2>
                         <img src="images/portrait.jpg" alt="" />
-                    </div>
+                    </div> -->
                     <p>
                         Hei! Mitt navn er Håvard Einarsen. Jeg er 27 år gammel
                         og bor i Bergen.<br /><br />
