Desktop version much better

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <main>
             <div class="sectionContainer">
                 <section
-                    class="aboutMe flex-col alig-sta just-sta"
+                    class="aboutMe flex-col alig-sta just-cen"
                     id="section1"
                 >
                     <!-- <div class="titleAndImage flex-row alig-cen">
