--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="variables.css" />
-        <link rel="stylesheet" href="index.css" />
-        <link rel="stylesheet" href="layout.css" />
+        <link rel="stylesheet" href="./css/variables.css" />
+        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="stylesheet" href="./css/layout.css" />
         <!-- <link rel="stylesheet" href="structure.css" /> -->
-        <link rel="stylesheet" href="mobileHeader.css" />
-        <link rel="stylesheet" href="media-queries.css" />
-        <script src="index.js" type="module" defer></script>
+        <link rel="stylesheet" href="./css/mobileHeader.css" />
+        <link rel="stylesheet" href="./css/media-queries.css" />
+        <script src="./js/index.js" type="module" defer></script>
     </head>
     <body>
         <header>
@@ -42,7 +42,7 @@
 
             <div class="desktopHero flex-col just-sta" id="section1desktop">
                 <div class="imageAndName flex-row just-cen alig-cen">
-                    <img src="images/defaultAvatar.jpg" alt="" srcset="" />
+                    <img src="images/portrait.jpg" alt="" srcset="" />
                     <h2>Håvard Einarsen<br />Full-stack Developer</h2>
                 </div>
                 <div class="navBar">
@@ -96,7 +96,7 @@
                     <!-- <h2>Prosjekter</h2> -->
                     <div class="projectsContainer"></div>
                 </section>
-                <!-- <section id="section3"></section> -->
+                <section id="section3"></section>
             </div>
         </main>
         <footer></footer>
