--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="./css/variables.css" />
-        <link rel="stylesheet" href="./css/index.css" />
-        <link rel="stylesheet" href="./css/layout.css" />
-        <!-- <link rel="stylesheet" href="structure.css" /> -->
-        <link rel="stylesheet" href="./css/mobileHeader.css" />
-        <link rel="stylesheet" href="./css/media-queries.css" />
-        <script src="./js/index.js" type="module" defer></script>
+        <title>Portfolio Håvard Einarsen</title>
+        <link rel="shortcut icon" href="#" type="image/x-icon" />
+        <link rel="stylesheet" href="css/variables.css" />
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/layout.css" />
+        <link rel="stylesheet" href="css/mobileHeader.css" />
+        <link rel="stylesheet" href="css/media-queries.css" />
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+        ></script>
+        <script src="js/index.js" type="module" defer></script>
     </head>
     <body>
         <header>
@@ -82,9 +86,10 @@
 
                         Etter å ha deltatt på Kodehode kurset, har jeg iløpet av
                         de siste 5 månedene dyppet tærne mine i HTML, CSS, Git,
-                        JS, TS, React. Jeg føler meg trygg med disse verktøyene
-                        og du kan se hvordan jeg har løst problemer med dem på
-                        mine prosjekter i Github.<br /><br />
+                        JS, TS, React, og nå i innspurten node, express og sql.
+                        Jeg føler meg trygg med disse verktøyene og du kan se
+                        hvordan jeg har løst problemer med dem på mine
+                        prosjekter i Github.<br /><br />
 
                         Jeg gleder meg til nye utfordringer, forbedre meg
                         ytterligere og utvikle morgendagens applikasjoner. Hvis
@@ -96,9 +101,41 @@
                     <!-- <h2>Prosjekter</h2> -->
                     <div class="projectsContainer"></div>
                 </section>
-                <section id="section3"></section>
+                <section
+                    class="contact flex-col just-cen alig-cen"
+                    id="section3"
+                >
+                    <form
+                        class="contact-form flex-col alig-sta"
+                        id="contact-form"
+                    >
+                        <input type="hidden" name="contact_number" />
+
+                        <label for="user_name">Name</label>
+                        <input
+                            class="formItem"
+                            type="text"
+                            name="user_name"
+                            id="user_name"
+                        />
+                        <label for="user_email">Email</label>
+                        <input
+                            class="formItem"
+                            type="email"
+                            name="user_email"
+                            id="user_email"
+                        />
+                        <label for="message">Message</label>
+                        <textarea
+                            class="formItem"
+                            name="message"
+                            id="message"
+                        ></textarea>
+                        <input class="formItem" type="submit" value="Send" />
+                    </form>
+                </section>
             </div>
         </main>
-        <footer></footer>
+        <!-- <footer></footer> -->
     </body>
 </html>
