Moved image and updated text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
             <div class="desktopHero flex-col just-sta" id="section1desktop">
                 <div class="imageAndName flex-row just-cen alig-cen">
-                    <img src="images/portrait.jpg" alt="" srcset="" />
                     <h2>Håvard Einarsen<br />Full-stack Developer</h2>
                 </div>
                 <div class="navBar">
@@ -67,20 +66,22 @@
         <main>
             <div class="sectionContainer">
                 <section
-                    class="aboutMe flex-col alig-sta just-cen"
+                    class="aboutMe flex-col alig-cen just-sta"
                     id="section1"
                 >
                     <!-- <div class="titleAndImage flex-row alig-cen">
                         <h2>Om meg</h2>
                         <img src="images/portrait.jpg" alt="" />
                     </div> -->
+                    <img src="images/portrait.webp" alt="" srcset="" />
+
                     <p>
                         Hei! Mitt navn er Håvard Einarsen. Jeg er 27 år gammel
                         og bor i Bergen.<br /><br />
 
                         For tiden deltar jeg på den intensive bootcampen
-                        Kodehode, hvor vi til nå har jobbet med på frontend
-                        utvikling, men hvor vi nå i innspurten skal se mer på
+                        Kodehode, hvor vi til nå har jobbet med frontend
+                        utvikling, men hvor vi nå i innspurten jobber med
                         backend. I Bergen har jeg alt jeg trenger for å trives:
                         fiske, fjellturer, gaming og Premier league kanalene.<br /><br />
 
@@ -97,7 +98,10 @@
                         ta kontakt med meg her. Takk for interessen.
                     </p>
                 </section>
-                <section class="projects" id="section2">
+                <section
+                    class="projects flex-col alig-cen just-sta"
+                    id="section2"
+                >
                     <!-- <h2>Prosjekter</h2> -->
                     <div class="projectsContainer"></div>
                 </section>
