--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     >
                         <input type="hidden" name="contact_number" />
 
-                        <label for="user_name">Name</label>
+                        <label for="user_name">Navn</label>
                         <input
                             class="formItem"
                             type="text"
@@ -129,7 +129,7 @@
                             name="user_email"
                             id="user_email"
                         />
-                        <label for="message">Message</label>
+                        <label for="message">Melding</label>
                         <textarea
                             class="formItem"
                             name="message"
