--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                         <div class="info">
                             <h4>Håvard Einarsen</h4>
-                            <h5>27, Full stack deveveloper</h5>
+                            <h5>27, Full stack utvikler</h5>
                         </div>
                     </div>
                 </div>
