--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                         <div class="info">
                             <h4>Håvard Einarsen</h4>
-                            <h5>27, Full stack utvikler</h5>
+                            <h5>27, Full-stack utvikler</h5>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
 
             <div class="desktopHero flex-col just-sta" id="section1desktop">
                 <div class="imageAndName flex-row just-cen alig-cen">
-                    <h2>Håvard Einarsen<br />Full-stack Developer</h2>
+                    <h2>Håvard Einarsen<br />Full-stack utvikler</h2>
                 </div>
                 <div class="navBar">
                     <ul>
