Fixed mobile bug with video modals, and added response on sent message

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Portfolio showcasing myself, my projects and how to get in contact with me"
+        />
         <title>Portfolio Håvard Einarsen</title>
         <link rel="shortcut icon" href="#" type="image/x-icon" />
         <link rel="stylesheet" href="css/variables.css" />
@@ -66,7 +70,7 @@
         <main>
             <div class="sectionContainer">
                 <section
-                    class="aboutMe flex-col alig-cen just-sta"
+                    class="aboutMe flex-col alig-cen just-cen"
                     id="section1"
                 >
                     <!-- <div class="titleAndImage flex-row alig-cen">
@@ -99,7 +103,7 @@
                     </p>
                 </section>
                 <section
-                    class="projects flex-col alig-cen just-sta"
+                    class="projects flex-col alig-cen just-cen"
                     id="section2"
                 >
                     <!-- <h2>Prosjekter</h2> -->
