--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                         <div class="info">
                             <h4>Håvard Einarsen</h4>
-                            <h5>27, Full-stack utvikler</h5>
+                            <h5>27, Front-end utvikler</h5>
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
 
             <div class="desktopHero flex-col just-sta" id="section1desktop">
                 <div class="imageAndName flex-row just-cen alig-cen">
-                    <h2>Håvard Einarsen<br />Full-stack utvikler</h2>
+                    <h2>Håvard Einarsen<br />Front-end utvikler</h2>
                 </div>
                 <div class="navBar">
                     <ul>
@@ -83,23 +83,26 @@
                         Hei! Mitt navn er Håvard Einarsen. Jeg er 27 år gammel
                         og bor i Bergen.<br /><br />
 
-                        For tiden deltar jeg på den intensive bootcampen
-                        Kodehode, hvor vi til nå har jobbet med frontend
-                        utvikling, men hvor vi nå i innspurten jobber med
-                        backend. I Bergen har jeg alt jeg trenger for å trives:
-                        fiske, fjellturer, gaming og Premier league kanalene.<br /><br />
+                        I Bergen har jeg alt jeg trenger for å trives: fiske,
+                        fjellturer, gaming og Premier-league kanalene. For tiden
+                        deltar jeg på den intensive bootcampen Kodehode, hvor vi
+                        mesteparten av kurset har jobbet med frontend utvikling
+                        og hvor vi nå i innspurten jobber med backend, noe jeg
+                        syntes virker veldig spennende, og noe jeg gjerne vil
+                        fordype meg mer i.
+                        <br /><br />
 
-                        Etter å ha deltatt på Kodehode kurset, har jeg iløpet av
-                        de siste 5 månedene dyppet tærne mine i HTML, CSS, Git,
-                        JS, TS, React, og nå i innspurten node, express og sql.
-                        Jeg føler meg trygg med disse verktøyene og du kan se
-                        hvordan jeg har løst problemer med dem på mine
+                        Som deltager på Kodehode, har jeg iløpet av de siste 5
+                        månedene dyppet tærne mine i Figma, HTML, CSS, Git, JS,
+                        TS, React, og nå i innspurten node, express, MongoDB og
+                        sql. Jeg føler meg stødig med disse verktøyene og du kan
+                        se hvordan jeg har løst problemer med dem på mine
                         prosjekter i Github.<br /><br />
 
-                        Jeg gleder meg til nye utfordringer, forbedre meg
-                        ytterligere og utvikle morgendagens applikasjoner. Hvis
-                        du ønsker meg med i teamet ditt, er du velkommen til å
-                        ta kontakt med meg her. Takk for interessen.
+                        Jeg gleder meg til nye utfordringer, utvikle meg selv og
+                        morgendagens applikasjoner. Hvis dette virket
+                        interessant, gi meg en lyd nedenfor. Takk for
+                        interessen.
                     </p>
                 </section>
                 <section
