--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div class="is-like">LIKE</div>
 
                         <div class="info">
-                            <h4>Håvard Einarsen</h4>
+                            <h1>Håvard Einarsen</h1>
                             <h5>27, Front-end utvikler</h5>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                             Om meg
                         </li>
                         <li data-target="section2" class="section2link">
-                            Projeskter
+                            Prosjekter
                         </li>
                         <li data-target="section3" class="section3link">
                             Kontakt
