added svg animations

--- a/index.html
+++ b/index.html
@@ -80,29 +80,26 @@
                     <img src="images/portrait.webp" alt="" srcset="" />
 
                     <p>
-                        Hei! Mitt navn er Håvard Einarsen. Jeg er 27 år gammel
-                        og bor i Bergen.<br /><br />
+                        Hei! Jeg heter Håvard og er frontend utvikler.<br /><br />
 
-                        I Bergen har jeg alt jeg trenger for å trives: fiske,
-                        fjellturer, gaming og Premier-league kanalene. For tiden
-                        deltar jeg på den intensive bootcampen Kodehode, hvor vi
-                        mesteparten av kurset har jobbet med frontend utvikling
-                        og hvor vi nå i innspurten jobber med backend, noe jeg
-                        syntes virker veldig spennende, og noe jeg gjerne vil
-                        fordype meg mer i.
+                        Jeg er for tiden deltaker i Kodehode, hvor vi
+                        mesteparten av kurset har jobbet med frontend-utvikling
+                        og backend nå i innspurten. Spesielt backend virker
+                        veldig spennende, og noe jeg vil fordype meg mer i. Jeg
+                        er også medlem i Os kodeklubb, og liker å kode på
+                        fritiden.
                         <br /><br />
 
-                        Som deltager på Kodehode, har jeg iløpet av de siste 5
-                        månedene dyppet tærne mine i Figma, HTML, CSS, Git, JS,
-                        TS, React, og nå i innspurten node, express, MongoDB og
-                        sql. Jeg føler meg stødig med disse verktøyene og du kan
-                        se hvordan jeg har løst problemer med dem på mine
-                        prosjekter i Github.<br /><br />
+                        De siste 6 månedene har jeg forbedret meg i alt fra
+                        Figma til HTML, CSS, Git, Javascript, Typescript, React,
+                        og nå i innspurten av kurset: node, express, MongoDB og
+                        SQL. React er mitt ess i ermet, og MERN-stacken virker
+                        da veldig interessant for meg. Jeg er også lærevillig og
+                        åpen for å lære mer. .<br /><br />
 
-                        Jeg gleder meg til nye utfordringer, utvikle meg selv og
-                        morgendagens applikasjoner. Hvis dette virket
-                        interessant, gi meg en lyd nedenfor. Takk for
-                        interessen.
+                        Jeg gleder meg til nye utfordringer, og bli en bedre
+                        utvikler. Gi gjerne en lyd hvis du vil bli bedre kjent.
+                        Takk for interessen.
                     </p>
                 </section>
                 <section
